test/static/wrong/alias1.kk
import static/modA
import static/modAWrong

alias myint = aint
